--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-auth-wrapper": "^2.0.2",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
   },
