--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,10 +22,10 @@
             "error",
             2
         ],
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
+        // "linebreak-style": [
+        //     "error",
+        //     "windows"
+        // ],
         "quotes": [
             "error",
             "single"
