--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
     "redux-thunk": "^2.2.0",
+    "request-promise": "^4.2.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
