--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "express-session": "^1.15.6",
     "isomorphic-fetch": "^2.2.1",
     "knex": "^0.14.2",
+    "mailgun-js": "^0.14.0",
     "material-ui": "^1.0.0-beta.24",
     "material-ui-icons": "^1.0.0-beta.17",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "password-generator": "^2.2.0",
     "pg": "^7.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
