--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "immutability-helper": "^2.6.2",
     "isomorphic-fetch": "^2.2.1",
     "knex": "^0.14.2",
     "mailgun-js": "^0.14.0",
@@ -34,6 +35,8 @@
     "password-generator": "^2.2.0",
     "pg": "^7.4.0",
     "react": "^16.2.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
