--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "password-generator": "^2.2.0",
     "pg": "^7.4.0",
     "react": "^16.2.0",
+    "react-beautiful-dnd": "^3.0.0",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
