--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "hsl-to-hex": "^1.0.0",
     "immutability-helper": "^2.6.2",
     "isomorphic-fetch": "^2.2.1",
     "knex": "^0.14.2",
     "mailgun-js": "^0.14.0",
+    "material-palette": "^1.0.0",
     "material-ui": "^1.0.0-beta.24",
     "material-ui-icons": "^1.0.0-beta.17",
     "next": "^4.2.1",
