--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^7.2.4",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-wrap-in-js": "^1.1.1",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
@@ -22,6 +25,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "glob": "^7.1.2",
     "hsl-to-hex": "^1.0.0",
     "immutability-helper": "^2.6.2",
     "isomorphic-fetch": "^2.2.1",
@@ -32,10 +36,14 @@
     "material-ui-icons": "^1.0.0-beta.17",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
+    "node-sass": "^4.7.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "password-generator": "^2.2.0",
     "pg": "^7.4.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-loader": "^2.0.10",
+    "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-beautiful-dnd": "^3.0.0",
     "react-dnd-html5-backend": "^2.5.4",
@@ -45,6 +53,7 @@
     "redux-auth-wrapper": "^2.0.2",
     "redux-thunk": "^2.2.0",
     "request-promise": "^4.2.2",
+    "sass-loader": "^6.0.6",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
