--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "redux-thunk": "^2.2.0",
     "request-promise": "^4.2.2",
     "sass-loader": "^6.0.6",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
