redux persist and spinning wheel

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "immutability-helper": "^2.6.2",
     "isomorphic-fetch": "^2.2.1",
     "knex": "^0.14.2",
+    "localforage": "^1.5.7",
     "mailgun-js": "^0.14.0",
     "material-palette": "^1.0.0",
     "material-ui": "^1.0.0-beta.24",
@@ -51,6 +52,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
+    "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0",
     "request-promise": "^4.2.2",
     "sass-loader": "^6.0.6",
