--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "glob": "^7.1.2",
+    "hoek": "^5.0.3",
     "hsl-to-hex": "^1.0.0",
     "immutability-helper": "^2.6.2",
     "isomorphic-fetch": "^2.2.1",
