--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "material-palette": "^1.0.0",
     "material-ui": "^1.0.0-beta.43",
     "material-ui-icons": "^1.0.0-beta.17",
+    "material-ui-search-bar": "^1.0.0-beta.4",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.7.2",
