--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     ],
     "parser": "babel-eslint",
     "rules": {
+        "no-console": 0,
         "react/jsx-uses-vars": [2],
         "indent": [
             "error",
