a couple more changes because of latest version of material ui

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "localforage": "^1.5.7",
     "mailgun-js": "^0.14.0",
     "material-palette": "^1.0.0",
-    "material-ui": "^1.0.0-beta.43",
+    "material-ui": "^1.0.0-beta.47",
     "material-ui-icons": "^1.0.0-beta.17",
     "material-ui-search-bar": "^1.0.0-beta.4",
     "next": "^4.2.1",
@@ -44,6 +44,7 @@
     "passport-local": "^1.0.0",
     "password-generator": "^2.2.0",
     "pg": "^7.4.0",
+    "popper.js": "^1.14.3",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.10",
     "raw-loader": "^0.5.1",
@@ -52,6 +53,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
+    "react-popper": "^0.10.4",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
