--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^1.1.0",
+    "@material-ui/icons": "^1.1.0",
     "autoprefixer": "^7.2.4",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
@@ -35,9 +36,6 @@
     "localforage": "^1.5.7",
     "mailgun-js": "^0.14.0",
     "material-palette": "^1.0.0",
-    "material-ui": "^1.0.0-beta.47",
-    "material-ui-icons": "^1.0.0-beta.17",
-    "material-ui-search-bar": "^1.0.0-beta.4",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.7.2",
