--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.1.0",
+    "@material-ui/core": "^1.2.0",
     "@material-ui/icons": "^1.1.0",
     "autoprefixer": "^7.2.4",
     "babel-plugin-module-resolver": "^3.0.0",
@@ -36,6 +36,7 @@
     "localforage": "^1.5.7",
     "mailgun-js": "^0.14.0",
     "material-palette": "^1.0.0",
+    "mime": "^2.3.1",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.7.2",
