--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "redux-thunk": "^2.2.0",
     "request-promise": "^4.2.2",
     "sass-loader": "^6.0.6",
+    "session-file-store": "^1.2.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "uuid": "^3.1.0"
