Worked on route handler, helpers and db migration.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
@@ -47,14 +48,17 @@
     "popper.js": "^1.14.3",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.10",
+    "ramda": "^0.25.0",
     "raw-loader": "^0.5.1",
     "react": "^16.4.0",
+    "react-autobind": "^1.0.6",
     "react-beautiful-dnd": "^3.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.4.0",
     "react-popper": "^0.10.4",
     "react-redux": "^5.0.6",
+    "react-text-mask": "^5.4.1",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
     "redux-persist": "^5.9.1",
