--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "fantasydata-node-client": "^1.1.0",
     "glob": "^7.1.2",
     "hoek": "^5.0.3",
     "hsl-to-hex": "^1.0.0",
