--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "fantasydata-node-client": "^1.1.0",
+    "fs": "0.0.1-security",
     "glob": "^7.1.2",
     "heroku-ssl-redirect": "0.0.4",
     "hoek": "^5.0.3",
@@ -74,7 +75,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
-    "eslint": "^4.13.1",
+    "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.5.1"
   }
 }
