--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.6",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
+    "date-fns": "2.0.0-alpha.7",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
@@ -41,6 +42,7 @@
     "localforage": "^1.5.7",
     "mailgun-js": "^0.14.0",
     "material-palette": "^1.0.0",
+    "material-ui-pickers": "^1.0.0-rc.11",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.7.2",
@@ -61,6 +63,7 @@
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.4.0",
     "react-popper": "^0.10.4",
+    "react-rating": "^1.3.0",
     "react-redux": "^5.0.6",
     "react-text-mask": "^5.4.2",
     "redux": "^3.7.2",
