--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^16.4.0",
     "react-autobind": "^1.0.6",
     "react-beautiful-dnd": "^3.0.0",
+    "react-burger-menu": "^2.5.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.4.0",
