--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,23 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
     {
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/server\\server.js"
+      "program": "${workspaceFolder}/scripts/Analysis/simulation.js"
+    },
+{
+  "type": "node",
+  "request": "launch",
+  "name": "Launch Program",
+  "program": "${workspaceFolder}/scripts/Analysis/test2.js"
+},
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Program",
+      "program": "${workspaceFolder}/scripts/updateStandings.js"
     }
   ]
 }
