--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "localforage": "^1.5.7",
     "mailgun-js": "^0.14.0",
     "material-palette": "^1.0.0",
+    "mathjs": "^5.0.2",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.7.2",
