--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "classnames": "^2.2.6",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
-    "date-fns": "2.0.0-alpha.7",
+    "date-fns": "^2.0.0-alpha.7",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
