--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.6",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
+    "date-fns": "^2.0.0-alpha.7",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
@@ -40,6 +41,7 @@
     "localforage": "^1.5.7",
     "mailgun-js": "^0.14.0",
     "material-palette": "^1.0.0",
+    "material-ui-pickers": "^1.0.0-rc.11",
     "next": "^4.2.1",
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.7.2",
