--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "next build"
   },
+  "engines": {
+    "npm": "6.3.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
