sport season updated, correct NHL dates

--- a/data/sport_seasons.json
+++ b/data/sport_seasons.json
@@ -4,7 +4,9 @@
   "season_type": 1,
   "start_pull_date": "2017-09-01",
   "end_pull_date": "2018-06-01",
-  "api_pull_parameter": 2018 },
+  "api_pull_parameter": 2018,
+  "start_season_date": "2017-09-01",
+  "end_season_date": "2018-06-01" },
 { "sport_season_id": 2,
   "sport_id": 101,
   "year": 2018,
@@ -12,14 +14,16 @@
   "start_pull_date": "2018-01-01",
   "end_pull_date": "2018-06-01",
   "api_pull_parameter": "2018PRE",
-  "start_season_date": "10-01-2017",
-  "end_season_date": "05-01-2018" },
+  "start_season_date": "2018-01-01",
+  "end_season_date": "2018-06-01" },
 { "sport_season_id": 3,
   "sport_id": 101,
   "year": 2018,
   "season_type": 3,
   "start_pull_date": "2018-04-01",
   "end_pull_date": "2018-06-30",
+  "start_season_date": "2018-04-01",
+  "end_season_date": "2018-06-30",
   "api_pull_parameter": "2018POST" },
 { "sport_season_id": 4,
   "sport_id": 102,
@@ -27,6 +31,8 @@
   "season_type": 1,
   "start_pull_date": "2017-09-01",
   "end_pull_date": "2018-01-01",
+  "start_season_date": "2017-09-01",
+  "end_season_date": "2018-01-01",
   "api_pull_parameter": 2017 },
 { "sport_season_id": 5,
   "sport_id": 102,
@@ -34,6 +40,8 @@
   "season_type": 2,
   "start_pull_date": "2017-01-01",
   "end_pull_date": "2018-01-01",
+  "start_season_date": "2017-08-01",
+  "end_season_date": "2017-09-04",
   "api_pull_parameter": "2017PRE" },
 { "sport_season_id": 6,
   "sport_id": 102,
@@ -41,6 +49,8 @@
   "season_type": 3,
   "start_pull_date": "2018-01-01",
   "end_pull_date": "2018-03-01",
+  "start_season_date": "2018-01-01",
+  "end_season_date": "2018-03-01",
   "api_pull_parameter": "2017POST" },
 { "sport_season_id": 7,
   "sport_id": 103,
@@ -48,6 +58,8 @@
   "season_type": 1,
   "start_pull_date": "2018-03-25",
   "end_pull_date": "2018-10-01",
+  "start_season_date": "2018-03-25",
+  "end_season_date": "2018-10-01",
   "api_pull_parameter": 2018 },
 { "sport_season_id": 8,
   "sport_id": 103,
@@ -55,6 +67,8 @@
   "season_type": 2,
   "start_pull_date": "2018-01-01",
   "end_pull_date": "2018-04-01",
+  "start_season_date": "2018-01-01",
+  "end_season_date": "2018-04-01",
   "api_pull_parameter": "2018PRE" },
 { "sport_season_id": 9,
   "sport_id": 103,
@@ -62,6 +76,8 @@
   "season_type": 3,
   "start_pull_date": "2018-10-01",
   "end_pull_date": "2018-11-04",
+  "start_season_date": "2018-10-01",
+  "end_season_date": "2018-11-04",
   "api_pull_parameter": "2018POST" },
 { "sport_season_id": 10,
   "sport_id": 104,
@@ -69,6 +85,8 @@
   "season_type": 1,
   "start_pull_date": "2017-09-01",
   "end_pull_date": "2018-07-01",
+  "start_season_date": "2017-09-01",
+  "end_season_date": "2018-07-01",
   "api_pull_parameter": 2018 },
 { "sport_season_id": 11,
   "sport_id": 104,
@@ -76,6 +94,8 @@
   "season_type": 2,
   "start_pull_date": "2017-07-01",
   "end_pull_date": "2017-10-01",
+  "start_season_date": "2017-07-01",
+  "end_season_date": "2017-10-01",
   "api_pull_parameter": "2018PRE" },
 { "sport_season_id": 12,
   "sport_id": 104,
@@ -83,6 +103,8 @@
   "season_type": 3,
   "start_pull_date": "2018-03-01",
   "end_pull_date": "2018-07-01",
+  "start_season_date": "2018-03-01",
+  "end_season_date": "2018-07-04",
   "api_pull_parameter": "2018POST" },
 { "sport_season_id": 13,
   "sport_id": 105,
@@ -90,6 +112,8 @@
   "season_type": 1,
   "start_pull_date": "2017-08-01",
   "end_pull_date": "2018-01-01",
+  "start_season_date": "2017-08-01",
+  "end_season_date": "2017-12-11",
   "api_pull_parameter": 2017 },
 { "sport_season_id": 14,
   "sport_id": 105,
@@ -97,6 +121,8 @@
   "season_type": 2,
   "start_pull_date": "2017-01-01",
   "end_pull_date": "2018-01-01",
+  "start_season_date": "2017-01-01",
+  "end_season_date": "2018-01-01",
   "api_pull_parameter": "2017PRE" },
 { "sport_season_id": 15,
   "sport_id": 105,
@@ -104,6 +130,8 @@
   "season_type": 3,
   "start_pull_date": "2017-11-25",
   "end_pull_date": "2018-01-21",
+  "start_season_date": "2017-11-25",
+  "end_season_date": "2018-01-21",
   "api_pull_parameter": "2017POST" },
 { "sport_season_id": 16,
   "sport_id": 106,
@@ -111,6 +139,8 @@
   "season_type": 1,
   "start_pull_date": "2017-09-01",
   "end_pull_date": "2018-04-01",
+  "start_season_date": "2017-09-01",
+  "end_season_date": "2018-04-01",
   "api_pull_parameter": 2018 },
 { "sport_season_id": 17,
   "sport_id": 106,
@@ -118,6 +148,8 @@
   "season_type": 2,
   "start_pull_date": "2017-08-01",
   "end_pull_date": "2018-01-01",
+  "start_season_date": "2017-08-01",
+  "end_season_date": "2018-01-01",
   "api_pull_parameter": "2018PRE" },
 { "sport_season_id": 18,
   "sport_id": 106,
@@ -125,6 +157,8 @@
   "season_type": 3,
   "start_pull_date": "2018-03-01",
   "end_pull_date": "2018-05-01",
+  "start_season_date": "2018-03-01",
+  "end_season_date": "2018-05-01",
   "api_pull_parameter": "2018POST" },
 { "sport_season_id": 19,
   "sport_id": 107,
@@ -132,6 +166,8 @@
   "season_type": 1,
   "start_pull_date": "2017-08-01",
   "end_pull_date": "2018-07-01",
+  "start_season_date": "2017-08-01",
+  "end_season_date": "2018-07-01",
   "api_pull_parameter": 144 },
 { "sport_season_id": 20,
   "sport_id": 107,
@@ -139,6 +175,8 @@
   "season_type": 2,
   "start_pull_date": "2018-01-01",
   "end_pull_date": "2018-07-01",
+  "start_season_date": "2018-01-01",
+  "end_season_date": "2018-07-01",
   "api_pull_parameter": 144 },
 { "sport_season_id": 21,
   "sport_id": 107,
@@ -146,6 +184,8 @@
   "season_type": 3,
   "start_pull_date": "2018-01-01",
   "end_pull_date": "2018-07-01",
+  "start_season_date": "2018-01-01",
+  "end_season_date": "2018-07-01",
   "api_pull_parameter": 144 },
 { "sport_season_id": 22,
   "sport_id": 101,
@@ -234,8 +274,8 @@
   "season_type": 1,
   "start_pull_date": "2018-08-03",
   "end_pull_date": "2019-04-07",
-  "start_season_date": "2018-09-05",
-  "end_season_date": "2018-10-01",
+  "start_season_date": "2018-10-03",
+  "end_season_date": "2019-04-06",
   "api_pull_parameter": 2019 },
 { "sport_season_id": 32,
   "sport_id": 104,
@@ -270,6 +310,8 @@
   "season_type": 2,
   "start_pull_date": "2018-01-01",
   "end_pull_date": "2018-10-01",
+  "start_season_date": "2018-01-01",
+  "end_season_date": "2019-10-01",
   "api_pull_parameter": "2018PRE" },
 { "sport_season_id": 36,
   "sport_id": 105,
@@ -295,6 +337,8 @@
   "season_type": 2,
   "start_pull_date": "2018-01-01",
   "end_pull_date": "2018-10-01",
+  "start_season_date": "2018-01-01",
+  "end_season_date": "2019-10-01",
   "api_pull_parameter": "2019PRE" },
 { "sport_season_id": 39,
   "sport_id": 106,
@@ -320,11 +364,15 @@
   "season_type": 2,
   "start_pull_date": "2018-01-01",
   "end_pull_date": "2018-10-01",
+  "start_season_date": "2018-01-01",
+  "end_season_date": "2019-10-01",
   "api_pull_parameter": 274 },
 { "sport_season_id": 42,
   "sport_id": 107,
   "year": 2019,
   "season_type": 3,
-  "start_pull_date": "2018-01-01",
-  "end_pull_date": "2018-10-01",
+  "start_pull_date": "2018-08-01",
+  "end_pull_date": "2018-05-13",
+  "start_season_date": "2018-08-10",
+  "end_season_date": "2019-05-13",
   "api_pull_parameter": 274 } ]
