--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-popper": "^0.10.4",
     "react-rating": "^1.3.0",
     "react-redux": "^5.0.6",
+    "react-swipeable": "^4.3.0",
     "react-text-mask": "^5.4.2",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
