--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "redux-auth-wrapper": "^2.0.2",
     "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.4",
