--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "prestart": "npm run build",
     "start": "next start",
     "build": "next build",
-    "dev": "node server/server.js",
+    "typecheck": "tsc ./server/**/*.ts --outDir jsoutput",
+    "devstart" : "node server/server.js",
+    "dev": "npm run typecheck && npm run devstart",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "next build"
   },
@@ -20,6 +22,7 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "autoprefixer": "^7.2.4",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
@@ -88,6 +91,7 @@
   "devDependencies": {
     "babel-eslint": "^8.0.3",
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "tslint-config-airbnb": "^5.11.0"
   }
 }
