--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "build": "next build",
     "typecheck": "tsc ./server/**/*.ts --outDir jsoutput",
-    "devstart" : "node server/server.js",
+    "devstart": "node server/server.js",
     "dev": "npm run typecheck && npm run devstart",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "npm run typecheck && next build"
@@ -86,6 +86,7 @@
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
+    "typescript": "^3.1.3",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
