--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "jsx": "preserve",
-    "lib": ["dom", "es2017"],
+    "lib": ["dom", "es2017", "es2015"],
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
+    //"noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "preserveConstEnums": true,
@@ -16,10 +16,11 @@
     "sourceMap": true,
     "strict": true,
     "target": "esnext",
-    "outDir" : "jsoutput"
+    "outDir": "jsoutput"
   },
   "include": [
-      "./server/**/*"
+      "./server/**/*.ts",
+      "./scripts/**/*.ts"
   ],
   "exclude": [
       "node_modules",
