--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.1.2",
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
     "@types/es6-promise": "^3.3.0",
     "@zeit/next-typescript": "^1.1.1",
     "autoprefixer": "^7.2.4",
+    "babel-loader": "^8.0.4",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "bcrypt-nodejs": "0.0.3",
