--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
     "@types/es6-promise": "^3.3.0",
+    "@types/node": "^10.12.0",
     "@zeit/next-typescript": "^1.1.1",
     "autoprefixer": "^7.2.4",
     "babel-loader": "^8.0.4",
