--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^3.0.3",
+    "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
     "autoprefixer": "^7.2.4",
     "babel-plugin-module-resolver": "^3.0.0",
@@ -69,6 +69,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.4.0",
+    "react-jss": "^8.6.1",
     "react-popper": "^0.10.4",
     "react-rating": "^1.3.0",
     "react-redux": "^5.0.6",
