in porgress changes for much, just to stash and save

--- a/data/sport_seasons.json
+++ b/data/sport_seasons.json
@@ -375,4 +375,194 @@
   "end_pull_date": "2019-05-13",
   "start_season_date": "2018-08-10",
   "end_season_date": "2019-05-13",
-  "api_pull_parameter": 274 } ]
+  "api_pull_parameter": 274 },
+  { "sport_season_id": 43,
+    "sport_id": 101,
+    "year": 2020,
+    "season_type": 1,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": 2020 },
+  { "sport_season_id": 44,
+    "sport_id": 101,
+    "year": 2020,
+    "season_type": 2,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": "2020PRE" },
+  { "sport_season_id": 45,
+    "sport_id": 101,
+    "year": 2020,
+    "season_type": 3,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": "2020POST" },
+  { "sport_season_id": 46,
+    "sport_id": 102,
+    "year": 2019,
+    "season_type": 1,
+    "start_pull_date": "2019-08-01",
+    "end_pull_date": "2019-12-31",
+    "start_season_date": "2019-09-06",
+    "end_season_date": "2019-12-31",
+    "api_pull_parameter": 2019 },
+  { "sport_season_id": 47,
+    "sport_id": 102,
+    "year": 2019,
+    "season_type": 2,
+    "start_pull_date": "2019-08-01",
+    "end_pull_date": "2019-09-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2019-09-01",
+    "api_pull_parameter": "2019PRE" },
+  { "sport_season_id": 48,
+    "sport_id": 102,
+    "year": 2019,
+    "season_type": 3,
+    "start_pull_date": "2020-01-01",
+    "end_pull_date": "2020-02-04",
+    "start_season_date": "2020-01-01",
+    "end_season_date": "2020-02-04",
+    "api_pull_parameter": "2019POST" },
+  { "sport_season_id": 49,
+    "sport_id": 103,
+    "year": 2020,
+    "season_type": 1,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": 2020 },
+  { "sport_season_id": 50,
+    "sport_id": 103,
+    "year": 2020,
+    "season_type": 2,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": "2020PRE" },
+  { "sport_season_id": 51,
+    "sport_id": 103,
+    "year": 2020,
+    "season_type": 3,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": "2020POST" },
+  { "sport_season_id": 52,
+    "sport_id": 104,
+    "year": 2020,
+    "season_type": 1,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": 2020 },
+  { "sport_season_id": 53,
+    "sport_id": 104,
+    "year": 2020,
+    "season_type": 2,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": "2020PRE" },
+  { "sport_season_id": 54,
+    "sport_id": 104,
+    "year": 2020,
+    "season_type": 3,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": "2020POST" },
+  { "sport_season_id": 55,
+    "sport_id": 105,
+    "year": 2019,
+    "season_type": 1,
+    "start_pull_date": "2019-08-01",
+    "end_pull_date": "2019-12-15",
+    "start_season_date": "2019-08-24",
+    "end_season_date": "2019-12-15",
+    "api_pull_parameter": 2019 },
+  { "sport_season_id": 56,
+    "sport_id": 105,
+    "year": 2019,
+    "season_type": 2,
+    "start_pull_date": "2019-08-01",
+    "end_pull_date": "2019-08-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2019-08-01",
+    "api_pull_parameter": "2019PRE" },
+  { "sport_season_id": 57,
+    "sport_id": 105,
+    "year": 2019,
+    "season_type": 3,
+    "start_pull_date": "2019-12-13",
+    "end_pull_date": "2020-01-14",
+    "start_season_date": "2019-12-15",
+    "end_season_date": "2020-01-13",
+    "api_pull_parameter": "2019POST" },
+  { "sport_season_id": 58,
+    "sport_id": 106,
+    "year": 2020,
+    "season_type": 1,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": 2020 },
+  { "sport_season_id": 59,
+    "sport_id": 106,
+    "year": 2020,
+    "season_type": 2,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": "2020PRE" },
+  { "sport_season_id": 60,
+    "sport_id": 106,
+    "year": 2020,
+    "season_type": 3,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": "2020POST" },
+  { "sport_season_id": 61,
+    "sport_id": 107,
+    "year": 2020,
+    "season_type": 1,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": 274 },
+  { "sport_season_id": 62,
+    "sport_id": 107,
+    "year": 2020,
+    "season_type": 2,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": 274 },
+  { "sport_season_id": 63,
+    "sport_id": 107,
+    "year": 2020,
+    "season_type": 3,
+    "start_pull_date": "2019-01-01",
+    "end_pull_date": "2019-10-01",
+    "start_season_date": "2019-08-01",
+    "end_season_date": "2020-05-13",
+    "api_pull_parameter": 274 }
+ ]
