--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "passport-local": "^1.0.0",
     "password-generator": "^2.2.0",
     "pg": "^7.4.0",
+    "pn": "^1.1.0",
     "popper.js": "^1.14.3",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.10",
@@ -84,6 +85,7 @@
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
+    "svg2png": "^4.1.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
