--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "lodash": "^4.17.10",
     "mailgun-js": "^0.20.0",
     "material-palette": "^1.0.0",
-    "material-ui-pickers": "^1.0.0-rc.14",
+    "material-ui-pickers": "^1.0.1",
     "mathjs": "^5.0.4",
     "next": "^6.1.1",
     "next-redux-wrapper": "^1.3.5",
