--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "rules": {
         "no-console": 0,
         "react/jsx-uses-vars": [2],
+        "react/jsx-fragments": [true, "syntax"],
         "indent": [
             "error",
             2
